--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,8 +1,3 @@
-.cards {
-  display: flex;
-  justify-content: center;
-}
-
 .skill-card {
   display: flex;
   flex-direction: column;
